--- a/.github/workflows/clean-old-caches.yaml
+++ b/.github/workflows/clean-old-caches.yaml
@@ -2,13 +2,13 @@ name: Clean old caches
 
 on:
   schedule:
-    - cron: "0 2 * * *"
+    - cron: '0 2 * * *'
   workflow_dispatch:
     inputs:
       keep_count:
-        description: "Number of caches to keep per group"
+        description: 'Number of caches to keep per group'
         required: false
-        default: "2"
+        default: '1'
         type: string
 
 jobs:
@@ -20,12 +20,12 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Setup Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
-          python-version: "3.11"
+          python-version: '3.13'
 
       - name: Install dependencies
         run: |
